testdata/baselines/reference/submodule/conformance/lateBoundAssignmentDeclarationSupport6.errors.txt
lateBoundAssignmentDeclarationSupport6.js(5,10): error TS2300: Duplicate identifier 'F'.
lateBoundAssignmentDeclarationSupport6.js(10,15): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
lateBoundAssignmentDeclarationSupport6.js(13,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
lateBoundAssignmentDeclarationSupport6.js(13,16): error TS2300: Duplicate identifier 'F'.
lateBoundAssignmentDeclarationSupport6.js(14,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
usage.js(2,15): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.


==== usage.js (1 errors) ====
    const x = require("./lateBoundAssignmentDeclarationSupport6.js");
    const inst =  new x.F();
                  ~~~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
    const y = inst["my-fake-sym"];
    const z = inst[x.S];
    
==== lateBoundAssignmentDeclarationSupport6.js (5 errors) ====
    // currently unsupported
    const _sym = Symbol();
    const _str = "my-fake-sym";
    
    function F() {
             ~
!!! error TS2300: Duplicate identifier 'F'.
    }
    F.prototype.defsAClass = true;
    Object.defineProperty(F.prototype, _str, {value: "ok"});
    Object.defineProperty(F.prototype, _sym, {value: "ok"});
    const inst =  new F();
                  ~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
    const _y = inst[_str];
    const _z = inst[_sym];
    module.exports.F = F;
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
                   ~
!!! error TS2300: Duplicate identifier 'F'.
    module.exports.S = _sym;
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.